# pytest-subtests

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  HOWTORELEASE.rst  LICENSE  README.rst  RELEASING.rst  appveyor.yml  azure-pipelines.yml  pyproject.toml  pytest.ini  pytest_subtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml  main.yml  test.yml
src/: pytest_subtests.py
src/pytest_subtests/: __init__.py  plugin.py
tests/: test_shortcut.py  test_subtests.py
