[metadata]
name = pytest-subtests
description = unittest subTest() support and subtests fixture
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytest-dev/pytest-subtests
author = Bruno Oliveira
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = test, unittest, pytest

[options]
py_modules = pytest_subtests
install_requires =
    pytest>=7.0
    attrs>=19.2.0
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0

[options.entry_points]
pytest11 =
    subtests = pytest_subtests
