[metadata]
name = pytest-subtests
description = unittest subTest() support and subtests fixture
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytest-dev/pytest-subtests
author = Bruno Oliveira
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Typing :: Typed
keywords = test, unittest, pytest

[options]
install_requires =
    attrs>=19.2.0
    pytest>=7.0
    typing_extensions;python_version<"3.8"
python_requires = >=3.7
packages = find:
package_dir =
    = src
setup_requires =
    setuptools
    setuptools-scm>=6.0

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    subtests = pytest_subtests.plugin

[options.package_data]
pytest_subtests = py.typed
